# persona

./: .geminiignore  .gitignore  .pre-commit-config.yaml  CONTEXT.md  Dockerfile  GEMINI.md  LICENSE.txt  PERSONA.md  README.md  ROADMAP.md  gemini-extension.json  justfile  pyproject.toml  quickstart.md  senior_terraform_engineer_(gcp_&_atlantis_gitops)_ROLE.md
.devcontainer/: Dockerfile  devcontainer.json
.gemini/: settings.json
.gemini/agents/: persona_matcher.toml
.gemini/commands/: summarize_notes.toml
.github/workflows/: CI.yaml
assets/: tags.jsonl
docs/explanation/: context-reduction.md  limitations.md
docs/guides/: configuration.md  context-management.md  installation-extension.md  installation-mcp.md  prompting.md  skills-management.md  tui-usage.md
docs/reference/: api.md  builtin-skills.md  cli.md  storage.md
scripts/embeddings/: .gitignore  eval.py  test_embeddings.py  train.py
scripts/embeddings/data/: eval_40.jsonl  test_40.jsonl  (+1 more)
src/: GEMINI.md
src/persona/: __init__.py  api.py  cache.py  config.py  embedder.py  models.py  tagger.py  templates.py  types.py  utils.py
tests/: conftest.py  test_config.py  test_templates.py
tests/cli/: conftest.py  test_apps.py  test_cache.py  test_cli_cache.py  test_cli_utils.py  test_commands.py  test_init.py  test_mcp.py  test_personas.py  test_skills.py  test_utils.py
tests/mcp/: test_mcp_utils.py  test_models.py  test_server.py
tests/persona/: conftest.py  test_api.py  test_cache.py  test_config.py  test_embedder.py  test_tagger.py  test_templates.py
tests/scripts/: test_embeddings.py
tests/storage/: test_base.py  test_local.py  test_models.py
(+65 files in other folders)
